--- a/fit/pubspec.yaml
+++ b/fit/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cloud_firestore: ^0.13.4+2
   provider: ^4.0.4
   fluttertoast: ^4.0.1
+  curved_navigation_bar: ^0.3.2
 
 dev_dependencies:
   flutter_test:
