--- a/fit/pubspec.yaml
+++ b/fit/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   provider: ^4.0.4
   fluttertoast: ^4.0.1
   curved_navigation_bar: ^0.3.2
+  flutter_form_builder: ^3.8.3
 
 dev_dependencies:
   flutter_test:
